# microblog-flask

./: .gitignore  README.md  app.db  config.py  pyproject.toml
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: index.html  login.html  user.html
migrations/versions/: 1487e028d964_new_fields_in_user_model.py  a3e8565d5e0d_.py  b0e7d42712bf_followers.py  edb396606f55_users_table.py
